--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-kind: ConfigMap
+kind: configMap
 metadata:
   name: catalogue
   namespace: roboshop
 data:
   MONGO: "true"
 ---
-apiVersion: apps/v1
+apiVersion: app/v1
 kind: Deployment
 metadata:
   name: catalogue
@@ -22,7 +22,7 @@ spec:
       app: catalogue
       project: roboshop
       tier: app
-  template:
+  template: 
     metadata:
       labels:
         app: catalogue
@@ -33,13 +33,13 @@ spec:
       - name: catalogue
         image: abdulahquraishi/catalogue:v1
         imagePullPolicy: Always
-        envFrom:
-        - configMapRef:
-            name: catalogue
+      envFrom:
+      - configMapRef:
+          name: catalogue
 ---
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: catalogue
   namespace: roboshop
 spec:
