--- a/web/manifest.yaml
+++ b/web/manifest.yaml
@@ -88,22 +88,6 @@ data:
           proxy_pass http://catalogue:8080/;
         }
 
-        location /api/user/ {
-          proxy_pass http://user:8080/;
-        }
-
-        location /api/cart/ {
-          proxy_pass http://cart:8080/;
-        }
-
-        location /api/shipping/ {
-          proxy_pass http://shipping:8080/;
-        }
-
-        location /api/payment/ {
-          proxy_pass http://payment:8080/;
-        }
-
 
     }
 
@@ -135,7 +119,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: abdulahquraishi/web:v1
+        image: joindevops/web:v1
         imagePullPolicy: Always
         volumeMounts:
         - name: nginx-conf
@@ -148,7 +132,7 @@ spec:
           name: web
           items:
             - key: nginx.conf
-              path: nginx.confb
+              path: nginx.conf
 ---
 apiVersion: v1
 kind: Service
