--- a/shipping/manifest.yaml
+++ b/shipping/manifest.yaml
@@ -7,7 +7,7 @@ data:
   CART_ENDPOINT: "cart:8080"
   DB_HOST: mysql
 ---
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shipping
