--- a/payment/manifest.yaml
+++ b/payment/manifest.yaml
@@ -8,7 +8,7 @@ data:
   AMQP_USER: cm9ib3Nob3A=
   AMQP_PASS: cm9ib3Nob3AxMjM=
 ---
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: payment
